<resources>
    <string name="app_name">库存管理</string>

    <!-- Strings related to login -->
    <string name="update_text">更新</string>
    <string name="prompt_email">用户名：</string>
    <string name="prompt_password">密码：</string>
    <string name="action_sign_in">登 录</string>
    <string name="save_pwd">记住密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="app_version">V1.0</string>
    <string name="error_invalid_password">登陆密码不能为空</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">用户名不能为空！</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--主界面-->
    <string name="put_in">入 库</string>
    <string name="put_out">出 库</string>
    <string name="take_stock">盘 点</string>
    <string name="main_title">主 界 面</string>

    <!--出入库界面-->
    <string name="ru_ku">入 库</string>
    <string name="tiao_ma">条码</string>
    <string name="xing_hao">型号</string>
    <string name="shu_liang">数量</string>
    <string name="xiang_shu">箱数</string>
    <string name="spq">SPQ</string>
    <string name="ding_dan">订单</string>
    <string name="ku_wei">库位</string>
    <string name="ku_fang">库房</string>
    <string name="shan_chu">删除</string>
    <string name="ming_xi">明细</string>
    <string name="hui_zong">汇总</string>
    <string name="wang_cheng">完 成</string>

    <!--产品查询界面-->
    <string name="product_query">产品型号</string>
    <string name="query">查询</string>
    <string name="clear">清空</string>
    <string name="product_model">请输入产品型号</string>

    <!--盘点界面-->
    <string name="pi_hao">批号</string>
    <string name="ku_wei_real">实际库位</string>
    <string name="pan_dian">盘 点</string>
    <string name="cao_zuo">操作</string>

    <!--标题-->
    <declare-styleable name="TopBar">
        <attr name="leftBackground" format="reference" />
        <attr name="rightBackground" format="reference" />
        <attr name="thridBackground" format="reference" />
        <attr name="titleText" format="string" />
        <attr name="titleTextSize" format="dimension" />
        <attr name="titleTextColor" format="color" />
    </declare-styleable>
</resources>
