<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    android:background="@color/white">

        <TableLayout
            android:id="@+id/scanningTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginRight="1dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/pi_hao"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginRight="1dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/xing_hao"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginRight="1dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingTop="2dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="2dp"
                    android:text="@string/spq"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginRight="1dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingTop="2dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="2dp"
                    android:text="@string/ku_wei"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginRight="1dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingTop="2dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="2dp"
                    android:text="@string/cao_zuo"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor1"/>
            </TableRow>
        </TableLayout>
</ScrollView>