<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity"
    android:background="@mipmap/bg">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/update_app"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:text="@string/update_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/setting_url"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:scaleType="fitEnd"
            app:srcCompat="@android:drawable/ic_menu_preferences" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="120dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <EditText
                android:id="@+id/email"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/white"
                android:textColor="@color/textColor4"
                android:background="@null"
                android:drawableBottom="@drawable/login_input_line"
                android:drawablePadding="8dp"
                android:drawableLeft="@mipmap/login_user"
                android:singleLine="true"/>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:hint="@string/prompt_password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/textColor4"
                android:background="@null"
                android:drawableBottom="@drawable/login_input_line"
                android:drawablePadding="8dp"
                android:drawableLeft="@mipmap/login_lock"
                android:textColor="@color/textColor4"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:id="@+id/if_save_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <CheckBox
                    android:id="@+id/checkbox_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/save_pwd"
                    android:textColor="@color/textColor5"/>
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:padding="5dp"
                android:onClick="loginClick"
                android:text="@string/action_sign_in"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/login_bt_shape"   />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:layout_marginLeft="230dp"
                android:text="@string/app_version"
                android:textSize="10sp"
                android:textColor="@color/textColor6"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>