<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/background1">

    <com.indusfo.repertorymanage.mlayout.TopBar
        android:id="@+id/main_activity_topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorTopBar"
        app:titleText="@string/main_title"
        app:titleTextColor="@color/white"
        app:titleTextSize="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/put_out"
            android:layout_width="160dp"
            android:layout_height="59.3dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/item_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/put_out" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/put_out"
                android:textColor="@color/textColor7"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/put_in"
            android:layout_width="160dp"
            android:layout_height="59.3dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/item_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/put_in" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/put_in"
                android:textColor="@color/textColor7"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/take_stock"
            android:layout_width="160dp"
            android:layout_height="59.3dp"
            android:background="@drawable/item_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/take_stock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/take_stock"
                android:textColor="@color/textColor7"
                android:textSize="18dp"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>