<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:background="@drawable/item_shape">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="48dp"
                    android:layout_height="20dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginLeft="6.7dp"
                    android:textColor="@color/textColor1"
                    android:text="@string/tiao_ma"/>
                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginLeft="6.7dp"
                    android:textColor="@color/textColor2"
                    android:text="233444343"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="48dp"
                    android:layout_height="20dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginLeft="6.7dp"
                    android:textColor="@color/textColor1"
                    android:text="@string/xing_hao"/>
                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginLeft="6.7dp"
                    android:textColor="@color/textColor2"
                    android:text="3223232"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="48dp"
                    android:layout_height="20dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginLeft="6.7dp"
                    android:textColor="@color/textColor1"
                    android:text="@string/ku_wei"/>
                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginLeft="6.7dp"
                    android:textColor="@color/textColor2"
                    android:text="323"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="48dp"
                    android:layout_height="20dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginLeft="6.7dp"
                    android:textColor="@color/textColor1"
                    android:text="@string/shu_liang"/>
                <TextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginLeft="6.7dp"
                    android:textColor="@color/textColor2"
                    android:text="323"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/delete"
                android:layout_width="48dp"
                android:layout_height="20dp"
                android:text="@string/shan_chu"
                android:textColor="@color/red"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
