<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".activity.TakeStockActivity"
    android:orientation="vertical">

    <com.indusfo.repertorymanage.mlayout.TopBar
        android:id="@+id/take_stock_activity_topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorTopBar"
        app:leftBackground="@drawable/title_shape_back"
        app:rightBackground="@drawable/title_shape_save"
        app:titleText="@string/pan_dian"
        app:titleTextColor="@color/white"
        app:titleTextSize="16dp"/>
    <!-- 上部  -->
    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:text="@string/ku_fang"
                android:gravity="center"
                android:textColor="@color/textColor1"
                android:textSize="18sp"
                />
            <Spinner
                android:id="@+id/ku_fang3"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:textColor="@color/textColor2"
                android:textSize="18sp"
                android:dropDownWidth="180dp"
                android:popupBackground="@color/white"
                android:spinnerMode="dropdown"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:text="库位"
                android:gravity="center"
                android:textColor="@color/textColor1"
                android:textSize="18sp"
                />
            <Spinner
                android:id="@+id/ku_wei3"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:textColor="@color/textColor2"
                android:textSize="18sp"
                android:dropDownWidth="180dp"
                android:popupBackground="@color/white"
                android:spinnerMode="dropdown"
                />
        </LinearLayout>

        <include layout="@layout/horline_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:text="@string/pi_hao"
                android:gravity="center"
                android:textColor="@color/textColor1"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/pi_hao3"
                android:layout_marginLeft="27dp"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text=""
                android:gravity="center_vertical"
                android:textColor="@color/textColor2"
                android:textSize="18sp"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- 中部  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:text="@string/ku_wei_real"
                android:gravity="center"
                android:textColor="@color/textColor1"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/ku_wei_real3"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/textColor2"
                android:textSize="18sp"
                />
        </LinearLayout>

        <include layout="@layout/horline_1"/>

        <LinearLayout
            android:id="@+id/lo4"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:text="@string/xing_hao"
                android:gravity="center"
                android:textColor="@color/textColor1"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/xing_hao3"
                android:layout_marginLeft="27dp"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text=""
                android:gravity="center_vertical"
                android:textColor="@color/textColor2"
                android:textSize="18sp"
                />
        </LinearLayout>

        <include layout="@layout/horline_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:text="@string/spq"
                android:gravity="center"
                android:textColor="@color/textColor1"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/spq3"
                android:layout_marginLeft="27dp"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text=""
                android:gravity="center_vertical"
                android:textColor="@color/textColor2"
                android:textSize="18sp"
                />
        </LinearLayout>
    </LinearLayout>

    <!--列表-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_marginTop="5dp"
        android:background="@color/white">
        <include layout="@layout/take_stock_table"/>
    </LinearLayout>
</LinearLayout>